--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
     <div class="container">
         <section id="about">
             <h2>About Me <span class="emoji emoji-laughing"></span></h2>
-            <p>I am a Software Engineer specializing in Android application development. Currently, I work part-time at a remote company, developing an Android app that utilizes external C++ libraries. With a strong background in data structures and algorithms, evidenced by my 1450 rating on Codeforces and over 2000 solved programming problems, I bring a robust problem-solving skillset to my projects. I am also pursuing an M.Sc in Computer Science and Engineering, focusing on Distributed Computer Systems, Deep Learning, and Image Processing.</p>
+            <div class = "about-text"></p> I am a Software Engineer specializing in Android application development. Currently, I work part-time at a remote company, developing an Android app that utilizes external C++ libraries. With a strong background in data structures and algorithms, evidenced by my 1450 rating on Codeforces and over 2000 solved programming problems, I bring a robust problem-solving skillset to my projects. I am also pursuing an M.Sc in Computer Science and Engineering, focusing on Distributed Computer Systems, Deep Learning, and Advanced Image Processing.</p> </class>
         </section>
 
         <section id="skills">
             <h2>Skills <span class="emoji emoji-star-struck"></span></h2>
             <div class="badges-container">
                 <img src="https://img.shields.io/badge/Android-Kotlin-green" alt="Android Development">
-                <img src="https://img.shields.io/badge/FMOD-Library-blue" alt="FMOD library">
-                <img src="https://img.shields.io/badge/Flutter-Past%20Experience-orange" alt="Flutter Framework">
-                <img src="https://img.shields.io/badge/Qt-Hobby%20Projects-lightgrey" alt="Qt">
                 <img src="https://img.shields.io/badge/Jira-Management-yellow" alt="Jira">
                 <img src="https://img.shields.io/badge/Confluence-Docs-lightgrey" alt="Confluence">
                 <img src="https://img.shields.io/badge/Git-Version%20Control-red" alt="Git">
                 <img src="https://img.shields.io/badge/Postman-API%20Testing-orange" alt="Postman">
+                <img src="https://img.shields.io/badge/FMOD-Library-blue" alt="FMOD Sound Library">
+                <img src="https://img.shields.io/badge/Flutter-Past%20Experience-orange" alt="Flutter Framework">
+                <img src="https://img.shields.io/badge/Qt-Hobby%20Projects-lightgrey" alt="Qt">
             </div>
         </section>
         <section id="experience">
-            <h2>Experience <span class="emoji emoji-rocket"></span></h2>
+            <h2>Professional Experience <span class="emoji emoji-rocket"></span></h2>
             <div class="experience-item">
                 <h3>Software Engineer, Hackules Ltd.</h3>
                 <p>Developing Android applications for an edtech platform using Kotlin and integrating FMOD library for advanced audio processing.</p>
@@ -60,14 +60,12 @@
                 <h3>Flutter Developer, Swadeshi Branding Limited</h3>
                 <p>Developed e-commerce and seller management applications using Flutter.</p>
             </div>
-            
-            <p>Currently, I am working part-time at a remote company on an Android app that involves using external C++ libraries. While I enjoy the job, I am looking for better opportunities and aiming to balance this job with my M.Sc program.</p>
         </section>
         <section id="education">
             <h2>Education <span class="emoji emoji-graduate"></span></h2>
             <ul>
-                <li>M.Sc in Computer Science and Engineering (Ongoing)</li>
-                <li>B.Sc in Mathematics</li>
+                <li>Master's of Science in Computer Science and Engineering (Ongoing)</li>
+                <li>Bachelor of Science in Mathematics</li>
             </ul>
         </section>
         <section id="contact">
