Adedd portfolio section and two products

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#education">Education</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -67,6 +68,21 @@
                 <li>Master's of Science in Computer Science and Engineering (Ongoing)</li>
                 <li>Bachelor of Science in Mathematics</li>
             </ul>
+        </section>
+        <section id="portfolio">
+            <h2>Portfolio Projects <span class="emoji emoji-briefcase"></span></h2>
+            <div class="portfolio-container">
+                <div class="portfolio-grid">
+                    <div class="portfolio-item">
+                        <img src="images/ninjahonda-poster.jpg" alt="Real car & motorcycle odometer">
+                        <p>Real car & motorcycle odometer</p>
+                    </div>
+                    <div class="portfolio-item">
+                        <img src="images/swadeshi-ecommerce-poster.png" alt="E-Commerce Application">
+                        <p>E-Commerce Application</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="contact">
             <h2>Contact <span class="emoji emoji-envelope"></span></h2>
