--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
                         <p>Real car & motorcycle odometer</p>
                     </div>
                     <div class="portfolio-item">
-                        <img src="images/swadeshi-ecommerce-poster.png" alt="E-Commerce Application">
-                        <p>E-Commerce Application</p>
+                        <a href="https://github.com/7ij/ninjahonda">
+                            <img src="images/swadeshi-ecommerce-poster.png" alt="E-Commerce Application">
+                            <p>E-Commerce Application</p>
+                        </a>
                     </div>
                 </div>
             </div>
