--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://avatars.githubusercontent.com/u/70688154?v=4" type="image/x-icon">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -29,7 +31,14 @@
     <div class="container">
         <section id="about">
             <h2>About Me <span class="emoji emoji-laughing"></span></h2>
-            <div class = "about-text"></p> I am a Software Engineer specializing in Android application development. Currently, I work part-time at a remote company, developing an Android app that utilizes external C++ libraries. With a strong background in data structures and algorithms, evidenced by my 1450 rating on Codeforces and over 2000 solved programming problems, I bring a robust problem-solving skillset to my projects. I am also pursuing an M.Sc in Computer Science and Engineering, focusing on Distributed Computer Systems, Deep Learning, and Advanced Image Processing.</p> </class>
+            <div class="about-text">
+                </p> I am a Software Engineer specializing in Android application development. Currently, I work
+                part-time at a remote company, developing an Android app that utilizes external C++ libraries. With a
+                strong background in data structures and algorithms, evidenced by my 1450 rating on Codeforces and over
+                2000 solved programming problems, I bring a robust problem-solving skillset to my projects. I am also
+                pursuing an M.Sc in Computer Science and Engineering, focusing on Distributed Computer Systems, Deep
+                Learning, and Advanced Image Processing.</p>
+                </class>
         </section>
 
         <section id="skills">
@@ -49,14 +58,16 @@
             <h2>Professional Experience <span class="emoji emoji-rocket"></span></h2>
             <div class="experience-item">
                 <h3>Software Engineer, Hackules Ltd.</h3>
-                <p>Developing Android applications for an edtech platform using Kotlin and integrating FMOD library for advanced audio processing.</p>
+                <p>Developing Android applications for an edtech platform using Kotlin and integrating FMOD library for
+                    advanced audio processing.</p>
             </div>
-            
+
             <div class="experience-item">
                 <h3>Software Engineer, Concepft Soft</h3>
-                <p>Developed audio processing Android applications using Kotlin, C++ with JNI, and FMOD Sound Engine.</p>
+                <p>Developed audio processing Android applications using Kotlin, C++ with JNI, and FMOD Sound Engine.
+                </p>
             </div>
-            
+
             <div class="experience-item">
                 <h3>Flutter Developer, Swadeshi Branding Limited</h3>
                 <p>Developed e-commerce and seller management applications using Flutter.</p>
@@ -74,14 +85,14 @@
             <div class="portfolio-container">
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
-                        <img src="images/ninjahonda-poster.jpg" alt="Real car & motorcycle odometer">
-                        <p>Real car & motorcycle odometer</p>
+                        <a href="https://github.com/7ij/ninjahonda">
+                            <img src="images/ninjahonda-poster.jpg" alt="Real car & motorcycle odometer">
+                            <p>Real car & motorcycle odometer</p>
+                        </a>
                     </div>
                     <div class="portfolio-item">
-                        <a href="https://github.com/7ij/ninjahonda">
-                            <img src="images/swadeshi-ecommerce-poster.png" alt="E-Commerce Application">
-                            <p>E-Commerce Application</p>
-                        </a>
+                        <img src="images/swadeshi-ecommerce-poster.png" alt="E-Commerce Application">
+                        <p>E-Commerce Application</p>
                     </div>
                 </div>
             </div>
@@ -93,8 +104,10 @@
     </div>
     <footer>
         <div class="container">
-            <p>&copy; 2024 Md. Ashiqur Rahman Naeem. All rights reserved. <span class="emoji emoji-clipboard"></span></p>
+            <p>&copy; 2024 Md. Ashiqur Rahman Naeem. All rights reserved. <span class="emoji emoji-clipboard"></span>
+            </p>
         </div>
     </footer>
 </body>
+
 </html>
