opening link in new tab for ninja honda project

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="portfolio-container">
                 <div class="portfolio-grid">
                     <div class="portfolio-item">
-                        <a href="https://github.com/7ij/ninjahonda">
+                        <a href="https://github.com/7ij/ninjahonda" target="_blank">
                             <img src="images/ninjahonda-poster.jpg" alt="Real car & motorcycle odometer">
                             <p>Real car & motorcycle odometer</p>
                         </a>
